--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 :root {
-  --primaryColor: #0e51b9;
-  --secondaryColor: #0e51b9;
+  --primaryColor: #1b57b1;
+  --secondaryColor: #1b57b1;
   --errorColor: #ff0033;
   --successColor: #00cc66;
   --infoColor: #0066ff;
@@ -22,4 +22,72 @@ body {
   font-family: "Inter", sans-serif;
   margin: 0;
   padding: 0;
+}
+
+#wrapper {
+  max-width: 1600px;
+  margin: 18vh auto 0;
+  padding: 0 7rem;
+}
+
+.navbar {
+  width: 100%;
+  position: fixed;
+  top: 2rem;
+  padding: 0 5rem;
+  margin: auto;
+  z-index: 10;
+}
+
+.navContainer {
+  background-color: white;
+  min-height: 7vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 3rem;
+  border-radius: 100px;
+  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.07);
+}
+
+.logo {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: black;
+  text-decoration: none;
+}
+
+.navLinksContainer {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+
+.navLink {
+  font-size: 1rem;
+  font-weight: 400;
+  color: black;
+  text-decoration: none;
+  -webkit-transition: all ease-in-out 0.3s;
+  -moz-transition: all ease-in-out 0.3s;
+  -ms-transition: all ease-in-out 0.3s;
+  -o-transition: all ease-in-out 0.3s;
+  transition: all ease-in-out 0.3s;
+}
+
+.navLink.active {
+  color: var(--primaryColor);
+  font-weight: 600;
+}
+
+.navLink:hover {
+  opacity: 0.7;
+}
+
+.footer {
+  width: 100%;
+  margin-bottom: 2rem;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
 }
