--- a/frontend/src/css/auth.css
+++ b/frontend/src/css/auth.css
@@ -6,8 +6,11 @@
 .auth-container .auth-illustration {
   width: 50%;
   background-color: var(--primaryColor);
-  background-image:
-    linear-gradient(to right, rgba(255, 255, 255, 0.05) 1px, transparent 1px),
+  background-image: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.05) 1px,
+      transparent 1px
+    ),
     linear-gradient(to bottom, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
   background-size: 25px 25px;
   padding: 3rem;
@@ -95,19 +98,6 @@ input[type="password"] {
   font-size: 16px;
   border: 1px solid #eee;
   border-radius: 0.5rem;
-}
-
-.btn-primary {
-  display: block;
-  width: 100%;
-  padding: 12px;
-  margin-top: 2rem;
-  font-size: 18px;
-  color: #fff;
-  background-color: var(--primaryColor);
-  border: none;
-  border-radius: 0.5rem;
-  cursor: pointer;
 }
 
 .auth-container .auth-form p {
