--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -24,6 +24,11 @@ body {
   padding: 0;
 }
 
+input {
+  font-family: "Inter", sans-serif;
+  outline: none;
+}
+
 #wrapper {
   max-width: 1600px;
   margin: 18vh auto 0;
@@ -184,6 +189,35 @@ body {
   -webkit-animation: btnSpinner 1s infinite linear;
   -o-animation: btnSpinner 1s infinite linear;
   animation: btnSpinner 1s infinite linear;
+}
+
+.link {
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--primaryColor);
+  text-decoration: none;
+  -webkit-transition: all ease-in-out 0.3s;
+  -moz-transition: all ease-in-out 0.3s;
+  -ms-transition: all ease-in-out 0.3s;
+  -o-transition: all ease-in-out 0.3s;
+  transition: all ease-in-out 0.3s;
+}
+
+.linkAlt {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #4d4d4d;
+  text-decoration: none;
+  -webkit-transition: all ease-in-out 0.3s;
+  -moz-transition: all ease-in-out 0.3s;
+  -ms-transition: all ease-in-out 0.3s;
+  -o-transition: all ease-in-out 0.3s;
+  transition: all ease-in-out 0.3s;
+}
+
+.link:hover,
+.linkAlt:hover {
+  opacity: 0.7;
 }
 
 @keyframes btnSpinner {
