completed frontend for forgot password

--- a/frontend/src/css/forgotPassword.css
+++ b/frontend/src/css/forgotPassword.css
@@ -1,8 +1,10 @@
 .container {
   width: 100%;
-  padding: 3rem 0;
   max-width: 800px;
   margin: 0 auto;
+  padding: 3rem;
+  border: solid 1px #ececec;
+  border-radius: 0.75rem;
 }
 
 .pageHeader {
@@ -17,6 +19,29 @@
   margin-bottom: 1rem;
 }
 
-#forgotPasswordForm {
+.otpContainer {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 1rem;
+}
 
+.otpContainer .otpInputContainer {
+  height: 85px;
+  width: 320px;
+}
+
+.otpContainer .otpText {
+  font-size: 2rem;
+  line-height: 5rem;
+  border-radius: 8px;
+  border: 1px solid #d9d9d9;
+}
+
+.otpContainer .inactiveText {
+  background-color: #ececec;
+}
+
+.otpContainer .selectedText {
+  outline: solid 1px var(--primaryColor);
+  color: var(--primaryColor);
 }
