--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -26,8 +26,7 @@
   margin-bottom: 0.25rem;
 }
 
-#uploadFileContainer .cardsGroup p,
-#uploadFileContainer .cardsGroup p .status {
+#uploadFileContainer .cardsGroup p {
   font-size: 1rem;
   line-height: 1.5rem;
   margin-bottom: 0;
