--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -120,7 +120,7 @@ input {
   font-weight: 400;
   line-height: 1.5rem;
   text-align: left;
-  padding-left: 5px;
+  padding-left: 0.5rem;
   width: 100%;
 }
 
