--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -178,6 +178,12 @@ input {
   width: 100%;
 }
 
+.btnPrimary.disabled {
+  background-color: #d9d9d9;
+  border: solid 2px #d9d9d9;
+  cursor: not-allowed;
+}
+
 .btnPrimary:hover {
   opacity: 0.8;
 }
