--- a/frontend/src/css/auth.css
+++ b/frontend/src/css/auth.css
@@ -92,7 +92,9 @@ label {
 
 input[type="text"],
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+input[type="number"],
+select {
   width: 100%;
   padding: 0.75rem;
   font-size: 16px;
