--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -232,7 +232,7 @@
   margin-bottom: 0.5rem;
 }
 
-.promptContainer textarea {
+textarea {
   font-family: "Inter", sans-serif;
   font-size: 1rem;
   font-weight: 400;
@@ -242,10 +242,9 @@
   border-radius: 0.25rem;
   resize: vertical;
   outline: none;
-  min-height: 150px;
 }
 
-.promptContainer textarea:focus {
+textarea:focus {
   border-color: var(--secondaryColor);
 }
 
@@ -258,20 +257,6 @@
   font-size: 1.2rem;
   font-weight: 400;
   margin-bottom: 1rem;
-}
-
-.modelAPIResponseContainer .modelAPIResponse {
-  display: flex;
-  gap: 1rem;
-  padding: 0.5rem 1rem;
-  border: solid 1px #e5e5e5;
-  border-radius: 0.25rem;
-  min-height: 150px;
-}
-
-.modelAPIResponseContainer .modelAPIResponse p {
-  font-size: 1rem;
-  font-weight: 400;
 }
 
 @media screen and (max-width: 992px) {
